@@ -120,9 +120,9 @@ ________________________________________________________________________________
 
 
 |:bn| |:bnext| |:tn| |:tnext| |:tabn| |:tabnext|
-||:tabn[ext] [count]|| +
-||:tn[ext] [count]|| +
-||:bn[ext] [count]||
+||:[count]tabn[ext] [count]|| +
+||:[count]tn[ext] [count]|| +
+||:[count]bn[ext] [count]||
 ________________________________________________________________________________
 Switch to the next or [count]th tab. Cycles to the first tab when the last is
 selected and {count} is not specified.
@@ -137,11 +137,11 @@ ________________________________________________________________________________
 
 
 |:bN| |:bNext| |:bp| |:bprevious| |:tN| |:tNext| |:tabN| |:tabNext| |:tp| |:tprevious| |:tabp| |:tabprevious|
-||:tabp[revious] [count]|| +
-||:tp[revious] [count]|| +
-||:tabN[ext] [count]|| +
-||:bp[revious] [count]|| +
-||:bN[ext] [count]||
+||:[count]tabp[revious] [count]|| +
+||:[count]tp[revious] [count]|| +
+||:[count]tabN[ext] [count]|| +
+||:[count]bp[revious] [count]|| +
+||:[count]bN[ext] [count]||
 ________________________________________________________________________________
 Switch to the previous tab or go [count] tabs back. Wraps around from the
 first tab to the last tab.
